--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:           pretty
 title:               Lanyon
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://pshung.github.io
+url:                 https://pshung.github.io
 baseurl:             'https://pshung.github.io/'
 paginate:            5
 
