--- a/_config.yml
+++ b/_config.yml
@@ -9,18 +9,18 @@ plugins: ["jekyll-paginate"]
 permalink:           pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               PeiHsiang
+tagline:             'PeiHsiang'
+description:         ''
 url:                 https://pshung.github.io
 baseurl:             'https://pshung.github.io/'
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              PeiHsiang Hung
+  url:               
+  email:             
 
 # Custom vars
 version:             1.0.0
